# dbt-action

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: materialize.yml  tests.yaml
